fix ul margin on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -116,6 +116,7 @@ section
       flex-direction column
       width 100vw
       max-width 90%
+      margin 0 auto
 
 footer
   bottom 0
